<resources>
    <string name="app_name">Siasis Mobile</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <string name="menu_home">Home</string>
    <string name="menu_gallery">Gallery</string>
    <string name="menu_slideshow">Slideshow</string>
    <string name="splash_title">Sistem Akademik Siswa</string>
    <string name="casual">casual</string>
    <string name="biodata">Biodata</string>
    <string name="mata_pelajaran">Mata Pelajaran</string>
    <string name="pembayaran_spp">Pembayaran SPP</string>
    <string name="raport">Raport</string>
    <string name="profil_sekolah">Profil Sekolah</string>
    <string name="data_alumni">Data Alumni</string>
    <string name="tentang">Tentang</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
</resources>